Remove batches to simplify
